RESOLVED FIXED99566
Assertion failed on HTMLFormControlElement.cpp: updateFromElementCallback()
https://bugs.webkit.org/show_bug.cgi?id=99566
Summary Assertion failed on HTMLFormControlElement.cpp: updateFromElementCallback()
Hajime Morrita
Reported 2012-10-17 01:52:33 PDT
Reproduction and fix will come shortly.
Attachments
Patch (3.37 KB, patch)
2012-10-17 02:11 PDT, Hajime Morrita
no flags
Patch (3.53 KB, patch)
2012-10-17 02:25 PDT, Hajime Morrita
no flags
Hajime Morrita
Comment 1 2012-10-17 02:11:08 PDT
Hajime Morrita
Comment 2 2012-10-17 02:12:29 PDT
Kent-san, could this be worth a rubberstamp? I have another bug fix which is blocked by this.
Kent Tamura
Comment 3 2012-10-17 02:16:07 PDT
Comment on attachment 169131 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=169131&action=review The code change is ok. > LayoutTests/ChangeLog:9 > + * fast/forms/textarea/remove-while-focusing.html: Added. Would you name this test "textarea-autofocus-removal-while-focusing.html" please?
Hajime Morrita
Comment 4 2012-10-17 02:25:36 PDT
Hajime Morrita
Comment 5 2012-10-17 02:26:07 PDT
Comment on attachment 169135 [details] Patch Sure. Renamed the test.
Kent Tamura
Comment 6 2012-10-17 02:31:36 PDT
Comment on attachment 169135 [details] Patch Thanks
WebKit Review Bot
Comment 7 2012-10-17 02:58:01 PDT
Comment on attachment 169135 [details] Patch Clearing flags on attachment: 169135 Committed r131572: <http://trac.webkit.org/changeset/131572>
WebKit Review Bot
Comment 8 2012-10-17 02:58:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.