Assertion failed on HTMLFormControlElement.cpp: updateFromElementCallback() https://bugs.webkit.org/show_bug.cgi?id=99566

Reviewed by Kent Tamura.

Source/WebCore:

It had a too optimistic assertion. This change removes it.

Test: fast/forms/textarea/textarea-autofocus-removal-while-focusing.html

* html/HTMLFormControlElement.cpp:
(WebCore::updateFromElementCallback):

LayoutTests:

* fast/forms/textarea/textarea-autofocus-removal-while-focusing.txt: Added.
* fast/forms/textarea/textarea-autofocus-removal-while-focusing.html: Added.


Canonical link: https://commits.webkit.org/117528@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131572 268f45cc-cd09-0410-ab3c-d52691b4dbfc